# app/api/handler/eligibility_handler.py
@@ -1,6 +1,6 @@
 from uuid import uuid4
-
-from pydantic import UUID4
+from typing import Optional
+from pydantic import UUID4, validator, Field
 
 import api.logging
 from api.db.models.eligibility_models import EligibilityScreener
@@ -15,11 +15,17 @@ class EligibilityScreenerSharedParams(PydanticBaseModel):
     last_name: str
     phone_number: str
 
+    # Treat null list the same as empty list by defaulting to empty
+    eligibility_categories: list[str] = Field(default_factory=list)
+    has_prior_wic_enrollment: bool
+    eligibility_programs: list[str] = Field(default_factory=list)
+
+    household_size: Optional[int]
+    zip_code: str
+    applicant_notes: Optional[str]
 
 class EligibilityScreenerRequest(EligibilityScreenerSharedParams):
     pass
-
-
 class EligibilityScreenerResponse(EligibilityScreenerSharedParams):
     eligibility_screener_id: UUID4
 
@@ -30,7 +36,6 @@ def create_eligibility_screener(api_context: ApiContext) -> EligibilityScreenerR
     # moving a lot more to this handler. Need to see how
     # well that works out as more is added.
     request = EligibilityScreenerRequest.parse_obj(api_context.request_body)
-    logger.info(request)  # TODO - remove, just for testing at the moment
 
     eligibility_screener = EligibilityScreener(
         # Specify the ID so we don't need to commit + refresh to get from DB
@@ -38,6 +43,12 @@ def create_eligibility_screener(api_context: ApiContext) -> EligibilityScreenerR
         first_name=request.first_name,
         last_name=request.last_name,
         phone_number=request.phone_number,
+        eligibility_categories=request.eligibility_categories,
+        has_prior_wic_enrollment=request.has_prior_wic_enrollment,
+        household_size=request.household_size,
+        eligibility_programs=request.eligibility_programs,
+        applicant_notes=request.applicant_notes,
+        zip_code=request.zip_code,
     )
 
     api_context.db_session.add(eligibility_screener)
